samples/task/valid/R10.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <context><p>This is context information.</p><ul><li>With a list item.</li></ul></context>
    <steps><step><cmd/></step></steps>
  </taskbody>
</task>