samples/task/invalid/R10.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <prereq><p>This is not a ul.</p></prereq>
    <steps><step><cmd/></step></steps>
  </taskbody>
</task>